--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,4 @@ __pycache__/
 # tools/
 
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore
+obj/Debug/net7.0/project.razor.vscode.bin
