--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,4 @@ obj/Debug/net7.0/staticwebassets.build.json
 obj/Debug/net7.0/staticwebassets.development.json
 obj/Debug/net7.0/staticwebassets.pack.json
 bin/Debug/net7.0/PruebaTécnicaMVCASPADO.staticwebassets.runtime.json
+bin/Debug/net7.0/PruebaTécnicaMVCASPADO.dll
